Fix logo section spacing and update iso image

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -79,7 +79,6 @@ $color-shadow: rgba(0, 0, 0, 0.5) !default;
 @import "pattern_hardware-details-table";
 @import "pattern_heading-icon";
 @import "pattern_icons";
-@import "pattern-image-ratios";
 @import "pattern_inline-list-midline";
 @import "pattern_lightbox";
 @import "pattern_lists";
@@ -169,7 +168,6 @@ $color-shadow: rgba(0, 0, 0, 0.5) !default;
 @include vf-p-icon-begin-downloading;
 @include vf-p-icon-video-play;
 @include openstack-carousel;
-@include vf-p-image;
 
 // Layouts:
 @import "layout-legal-pages";
